# GGSP

./: .env  .gitignore  README.md  onyxia_install_script.bash  pyproject.toml
checkpoints/: test.txt
src/drive/: __init__.py  gdrive.py  utils.ipynb
src/ggsp/: base.yaml  best_config_test.yaml  denoise_grid_search.yaml  extract_feats.py  grid_search.yaml  main.py  utils.py
src/ggsp/data/: __init__.py  data_augmentation.py  extract_feats.py  preprocess.py
src/ggsp/metrics/: __init__.py  denoising_loss.py  graph_metric.py  mae.py  utils.ipynb
src/ggsp/models/: __init__.py  autoencoder.py  decoders.py  denoise_model.py  encoders.py  noiser.py
src/ggsp/runners/: __init__.py  experiment.py  grid_search.py  submission_generator.py
src/ggsp/train/: __init__.py  autoencoder.py  denoise_model.py
src/ggsp/utils/: __init__.py  custom_layers.py  graph_utils.py  logger.py  utils.py
