[project]
description = "ALTEGRAD Project about Generating Graphs with Specified Properties"
name = "GGSP"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ggsp = { path = ".", editable = true }
