[project]
description = "ALTEGRAD Project about Generating Graphs with Specified Properties"
name = "GGSP"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [ "torch>=2.5.1,<3", "networkx>=3.4.2,<4", "scipy>=1.14.1,<2", "numpy>=2.2.1,<3", "pandas>=2.2.3,<3", "tqdm>=4.67.1,<5", "torch-geometric>=2.6.1,<3", "google-auth", "google-auth-oauthlib", "google-auth-httplib2", "google-api-python-client", "pyyaml>=6.0.2,<7", "python-dotenv>=1.0.1,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.12,<3.13"
